--- a/picard-collect-hs-metrics/Dockerfile
+++ b/picard-collect-hs-metrics/Dockerfile
@@ -1,10 +1,21 @@
 FROM continuumio/miniconda3:4.9.2
 
+# filled by wfpm
 LABEL org.opencontainers.image.source https://github.com/icgc-argo-qc-wg/argo-qc-tools
 
-ENV PATH="/tools:${PATH}"
+# add ps (required by nextflow)
+RUN apt-get -y update  && \
+    apt-get install -y procps && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-COPY *.py /tools/
+ENV PATH="//opt/conda/bin:${PATH}"
+
+# install java
+RUN conda install --yes -c conda-forge openjdk=11.0.9.1
+
+# Fetch Picard
+RUN wget https://github.com/broadinstitute/picard/releases/download/2.25.7/picard.jar
 
 ENTRYPOINT ["/usr/bin/env"]
 
