--- a/detin/Dockerfile
+++ b/detin/Dockerfile
@@ -1,10 +1,25 @@
-FROM continuumio/miniconda3:4.9.2
+FROM continuumio/miniconda:4.7.12
 
 LABEL org.opencontainers.image.source https://github.com/icgc-argo-qc-wg/argo-qc-tools
 
-ENV PATH="/tools:${PATH}"
+# add ps (required by nextflow)
+RUN apt-get --allow-releaseinfo-change update  && \
+    apt-get install -y procps && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-COPY *.py /tools/
+# install requirements for deTiN
+RUN /opt/conda/bin/conda install --yes -c conda-forge numpy
+RUN /opt/conda/bin/conda install --yes -c conda-forge pandas
+RUN /opt/conda/bin/conda install --yes -c conda-forge scipy
+RUN /opt/conda/bin/conda install --yes -c conda-forge scikit-learn
+
+
+# Add main wrapper:
+RUN mkdir -p /tools
+ENV PATH="/tools:${PATH}"
+COPY deTiN /tools/
+
 
 ENTRYPOINT ["/usr/bin/env"]
 
