Made dockerfile simpler

--- a/detin/Dockerfile
+++ b/detin/Dockerfile
@@ -8,17 +8,15 @@ RUN apt-get --allow-releaseinfo-change update  && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# install requirements for deTiN
-RUN /opt/conda/bin/conda install --yes -c conda-forge numpy
-RUN /opt/conda/bin/conda install --yes -c conda-forge pandas
-RUN /opt/conda/bin/conda install --yes -c conda-forge scipy
-RUN /opt/conda/bin/conda install --yes -c conda-forge scikit-learn
-
 
 # Add main wrapper:
 RUN mkdir -p /tools
 ENV PATH="/tools:${PATH}"
 COPY deTiN /tools/
+
+# install requirements for deTiN
+CMD ["/tools/deTiN/setup.py install"]
+ENTRYPOINT ["python"]
 
 
 ENTRYPOINT ["/usr/bin/env"]
